logs/python-application.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/application'...
Listing './lib/python3.5/site-packages/application/configuration'...
Compiling './lib/python3.5/site-packages/application/configuration/__init__.py'...
***   File "./lib/python3.5/site-packages/application/configuration/__init__.py", line 61
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/application/configuration/datatypes.py'...
***   File "./lib/python3.5/site-packages/application/configuration/datatypes.py", line 104
    except ValueError, why:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/application/debug'...
Compiling './lib/python3.5/site-packages/application/debug/memory.py'...
***   File "./lib/python3.5/site-packages/application/debug/memory.py", line 99
    print "\nGARBAGE:"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/application/debug/timing.py'...
***   File "./lib/python3.5/site-packages/application/debug/timing.py", line 128
    print format_string.format(loops, self.repeat, normalized_time, time_unit, statement_rate, description=self.description, precision=3, rate_precision=rate_precision)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/application/log'...
Listing './lib/python3.5/site-packages/application/log/extensions'...
Listing './lib/python3.5/site-packages/application/log/extensions/twisted'...
Compiling './lib/python3.5/site-packages/application/process.py'...
***   File "./lib/python3.5/site-packages/application/process.py", line 58
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/application/python'...
Compiling './lib/python3.5/site-packages/application/python/decorator.py'...
***   File "./lib/python3.5/site-packages/application/python/decorator.py", line 23
    exec "def {0}{1}: return wrapper{1}".format(func.__name__, parameters) in {'wrapper': wrapper}, exec_scope  # can't use tuple form here (see https://bugs.python.org/issue21591)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/application/system.py'...
***   File "./lib/python3.5/site-packages/application/system.py", line 65
    def makedirs(path, mode=0777):
                               ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_application-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
